feat: dataset inicial e feature engineering
